# MangaTrans

./: .gitignore  DELIVERY.md  INDEX.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  SUMMARY.txt  TODO.md  V2_EXAMPLES.md  demo.sh  pyproject.toml  summary.sh
docs/: spec.md
src/mangatrans/: __init__.py
src/mangatrans/application/: __init__.py
src/mangatrans/application/ports/: __init__.py  ocr.py  translator.py
src/mangatrans/application/usecases/: __init__.py  translate_page.py
src/mangatrans/domain/: __init__.py  models.py
src/mangatrans/infrastructure/: __init__.py
src/mangatrans/infrastructure/exporters/: __init__.py  json_exporter.py
src/mangatrans/interfaces/: __init__.py
src/mangatrans/interfaces/cli/: __init__.py  main.py
tests/: test_json_schema.py  test_use_case.py
